Fix settings dialog layout on IE
Bug: T138612

--- a/resources/ext.popups.settings.less
+++ b/resources/ext.popups.settings.less
@@ -36,6 +36,7 @@
 	}
 
 	main {
+		display: block;
 		width: 350px;
 		padding: 50px 0 40px;
 		margin: 0 auto;
